# fashionistar_backend

./: .dockerignore  .env.example  .env.production.example  .gcloudignore  .gitattributes  .gitignore  =3.1.0  AGENTS.md  AGENT_PLAN.MD  AuthorQueryOptimizationTests.PY  Dockerfile  Dockerfile.celery  Dockerfile.dev  Dockerfile.production  IMPLEMENTATION-PLAN.md  Makefile  PHASE2_CONTINUATION.MD  PHASE3_API_DEVELOPMENT.MD  README.md  REGISTRATION.MD  TESTING_COMPREHENSIVE_GUIDE.md  TESTING_IMPLEMENTATION_COMPLETE.md  TODO  __diag_idem.py  _fix_brand_table.py  _patch_installed_apps.py  _patch_urls.py  _seed_catalog.py  check_vendor.py  cloudbuild-celery.yaml  commit.txt  commit2.txt  conftest.py  db.sqlite3  debug_webhook_signature.py  default_setting_backup.py  default_setting_backup.txt  djangonewversion.txt  djangooldversion.txt  docker-compose.production.yml  (+57 more)
.agents/scratch/: fix_sync_views.py
.git_disabled/: COMMIT_EDITMSG  ORIG_HEAD  config  index
.git_disabled/gk/: config
.git_disabled/logs/: HEAD
.github/workflows/: ci.yml  codacy.yml  codeql.yml  deploy-hf-all.yml  deploy-hf.yml  deploy-northflank.yml  deploy-oracle.yml
Blog/: models.py
Homepage/: brand.py  category.py  collections.py  models.py  product.py  serializers.py  urls.py
Paystack_Webhoook_Prod/: BankAccountDetails.py  TRANSFER_WITHDRAWAL.PY  VendorWithdrawView.py  admin.py  deposit.py  models.py  paystack.py  serializers_WITHDRAWAL.py  serializers__BankAccountDetails.py  urls.py  vendor_webhook.py  webhook.py
Paystack_Webhoook_Prod/UTILS/: paystack.py  utils_TransferRecipient.py
Paystack_Webhoook_Prod/tests/: conftest.py
ShopCart/: urls.py  views.py
ShopCart/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
addon/: models.py
addon/migrations/: 0001_initial.py
admin_backend/: admin.py  apps.py  models.py  orders.py  serializers.py  urls.py  views.py
admin_backend/admin/: brand_admin.py  category_admin.py  collection_admin.py
admin_backend/migrations/: 0001_initial.py  0002_add_cloudinary_url_fields.py  0002_alter_collections_background_image_and_more.py  0002_initial.py
admin_backend/models/: brand.py  category.py  collection.py  email_backend_config.py
api/: urls.py
api_spec/: rapidapi_tests.http  schema.yml
apps/admin_backend/: apps.py  chat_view.py  dashboard_api.py  delivery.py  events.py  middleware.py  order_view.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/agent_tools/: apps.py  chart_generator.py  code_generator.py  structure_validator.py
apps/ai/: __init__.py  admin.py  apps.py
apps/analytics/: admin.py  apps.py  consumers.py  entry_points.py  metrics.py  middleware.py  models.py  routing.py  serializers.py  services.py  tasks.py  views.py
apps/app_standards/: apps.py
apps/audit_logs/: README.md  __init__.py  admin.py  apps.py  logentry_bridge.py  middleware.py  mixins.py  models.py  tasks.py
apps/authentication/: AUTH_REFACTOR_PLAN.MD  README.md  admin.py  apps.py  backends.py  exceptions.py  managers.py  models.py  ninja_api.py  permissions.py  serializers.py  tasks.py  throttles.py  urls.py
apps/cart/: __init__.py  apps.py  schemas.py  selectors.py  signals.py  urls.py
apps/catalog/: README.md  __init__.py  apps.py  permissions.py  signals.py  throttles.py  urls.py
apps/chat/: __init__.py  admin.py  apps.py  consumers.py  realtime.py  routing.py  urls.py
apps/chatbot/: README.md  admin.py  apps.py  models.py  serializers.py  settings.py  tests.py  urls.py  views.py
apps/client/: __init__.py  admin.py  apps.py  events.py  tasks.py  urls.py
apps/common/: README.md  admin.py  admin_cloudinary_mixin.py  admin_import_export.py  admin_mixins.py  admin_ui.py  apps.py  decorators.py  event_handlers.py  events.py  exceptions.py  middleware.py  models.py  (+18 more)
backend/: SETTINGSPY  apps.py  asgi.py  celery.py  error_views.py  ninja_api.py  settings.py  settings_legacy_backup.py  twilio.py  urls.py  websocket_auth.py  websocket_routes.py
chat/: routing.py
createOrder/: order.py  urls.py  utils.py  views.py
customer/: models.py  profile.py  reviews.py  serializers.py  urls.py  views.py
deploy/: deploy.sh  oracle-setup.sh  setup_all_platforms.sh
k6/: catalog_load_test.js  client_dashboard_load.js  load_test.js
measurements/: models.py  serializers.py  urls.py  views.py
notification/: urls.py  vendor_views.py
scratch/: check_products.py  check_users.py  debug_admin_checks.py  delete_logs.py  delete_logs_v2.py  delete_user.py  find_all_large_files.py  find_bad_format_html.py  fix_collections_table.py  fix_migrations.py  fix_stock.py  list_large_dirs.py  old_product_views.py  seed_catalog_5.py  seed_collections.py  seed_production_catalog_premium.py  test_playwright_simple.py  verify_client.py
scripts/: create_superuser.py  fix_date_fields.py  fix_order_fields.py  fix_order_fields2.py  hf_monitor.py  modal_ollama.py  pull_ollama_models.ps1  qa_check_schema.py  qa_create_users.py  qa_fix_schema.py  qa_provision_vendor.py  qa_vendor_debug.py  qa_vendor_deep_debug.py  qa_vendor_profile.py  qa_verify_users.py  seed_live_test_data.py  seed_vision_testdata.py  test_layer1_api.py  validate_utf8.py  verify_layer234.py  verify_redis_cache.py
store/: admin.py  createorder.py  models.py  serializers.py  urls.py  views.py
stress_tests/: 01_redis_benchmark.py  02_http_load_test.py  03_architectural_audit.py  04_auth_100k_rps.py  06_race_condition_suite.py  __init__.py  fashionistar_stress_test.py  stress_health.py
templates/: test_cloudinary_upload.html
tests/: conftest.py  factories.py  locustfile.py  test_admin_roles.py  test_ai_workflows.py  test_auth_concurrency.py  test_auth_scalability.py  test_cloudinary_webhook_signature.py  test_common_scalability.py  test_comprehensive_integration.py  test_p2p_transfer_concurrency.py  test_phase7_concurrency.py  test_race_conditions.py
transaction/: models.py  serializers.py  urls.py  views.py
userauths/: apps.py  celery_tasks.py  later-to-use-code-for-phone-sms.py  managers.py  models.py  serializer.py  tasks.py  urls.py  utils.py  views.py
utilities/: tasks.py
(+1287 files in other folders)
